--- a/index.html
+++ b/index.html
@@ -6,21 +6,19 @@
 <title>Marina Dahl</title>
 <style>
 :root{--bg:#fff;--fg:#222;--accent:#0057b8;--card:#f5f5f5;--border:#ccc;--trans:180ms;--footer-h:72px}
-.dark{--bg:#0b1116;--fg:#e6eef8;--accent:#3399ff;--card:#0f1720;--border:#24303a}
+.dark{--bg:#0b1116;--fg:#e6eef8;--accent:#0057b8;--card:#0f1720;--border:#24303a}
 *{box-sizing:border-box}
 html{font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;background:var(--bg);color:var(--fg);transition:background var(--trans),color var(--trans)}
 body{margin:0;display:flex;flex-direction:column;min-height:100vh}
 header{padding:2rem 1rem 1rem;background:var(--accent);color:#fff;position:relative;text-align:center}
 #theme-toggle{position:absolute;right:.6rem;top:.6rem;padding:.35rem .6rem;border-radius:6px;border:1px solid rgba(255,255,255,.18);background:rgba(255,255,255,.12);cursor:pointer}
 
-/* content-box: zentriert, Breite = 2/3 der Viewport-Breite, Mindesthöhe damit Footer am Ende steht */
+/*Content-Box */
 .content-box{
   width:66.666vw;
   min-width:320px;
   max-width:1200px;
   margin:0 auto;
-  /* Platz (Abstand) oberhalb des Footers: min-height reduziert um den Abstand,
-     padding-bottom sorgt für die optische Abgrenzung */
   min-height:calc(100vh - var(--footer-h) - 1.5rem);
   padding:0 1rem 1.5rem;
   box-sizing:border-box;
@@ -30,7 +28,7 @@ header{padding:2rem 1rem 1rem;background:var(--accent);color:#fff;position:relat
 .tabs,.tabpanels{width:100%}
 .tab{box-sizing:border-box}
 
-/* Footer: feste Höhe (variabel über --footer-h) und immer am Ende */
+/* Footer */
 .site-footer{background:var(--accent);color:#fff;height:var(--footer-h);min-height:var(--footer-h);display:flex;align-items:center;padding:0}
 .footer-inner{max-width:1200px;width:66.666vw;margin:0 auto;padding:0 1rem;display:flex;align-items:center;justify-content:space-between;gap:1rem}
 .imprint{font-size:.9rem}
@@ -85,7 +83,7 @@ th{background:var(--accent);color:#fff;font-weight:700}
   color:inherit;
 }
 .preview img{
-  width:160px;          /* fixe Bildbreite, Höhe passt automatisch (Seitenverhältnis bleibt) */
+  width:160px;          
   height:auto;
   object-fit:cover;
   flex:0 0 160px;
@@ -101,6 +99,7 @@ th{background:var(--accent);color:#fff;font-weight:700}
 @media (max-width:900px){.intro{grid-template-columns:1fr;gap:1rem}.intro-img{width:320px;justify-self:center}.intro-img img{height:auto;width:100%}.tabs{flex-wrap:wrap}}
 </style>
 </head>
+
 <body>
 <header>
   <h1>Marina Dahl</h1>
@@ -109,15 +108,15 @@ th{background:var(--accent);color:#fff;font-weight:700}
 </header>
 
 <main>
-  <!-- Content-Box: setzt Breite (2/3 viewport) und Mindesthöhe, damit Footer am Seitenende bleibt -->
+  <!-- Content-Box: Platzhalter für Seiteninhalt, setzt Breite und Mindesthöhe -->
   <div class="content-box">
-
+    <!--Tabs-->
     <nav class="tabs" role="tablist" aria-label="Hauptnavigation">
       <button class="tab" role="tab" id="tab-about" aria-controls="panel-about" aria-selected="true" tabindex="0">Über mich</button>
       <button class="tab" role="tab" id="tab-current" aria-controls="panel-current" aria-selected="false" tabindex="-1">Aktuelles</button>
       <button class="tab" role="tab" id="tab-projects" aria-controls="panel-projects" aria-selected="false" tabindex="-1">Projekte</button>
     </nav>
-
+    <!--Tab: Über mich-->
     <div class="tabpanels">
       <section id="panel-about" class="panel" role="tabpanel" aria-labelledby="tab-about">
         <div class="intro">
@@ -128,7 +127,6 @@ th{background:var(--accent);color:#fff;font-weight:700}
           </div>
         </div>
 
-        <!-- Tabelle jetzt unterhalb von Bild und Intro-Text, volle Breite der Content-Box -->
         <div class="intro-table">
           <h2>Mein Werdegang</h2>
           <table>
@@ -141,17 +139,16 @@ th{background:var(--accent);color:#fff;font-weight:700}
           </table>
         </div>
       </section>
-
+      <!--Tab: Aktuelles-->  
       <section id="panel-current" class="panel" role="tabpanel" aria-labelledby="tab-current" hidden>
         <h2>Aktuelles</h2>
-
-        <!-- news will be loaded here from news.json -->
         <div class="article-grid" id="news-list">Lade Neuigkeiten…</div>
       </section>
-
+      <!--Tab: Projekte--> 
       <section id="panel-projects" class="panel" role="tabpanel" aria-labelledby="tab-projects" hidden>
         <h2>Projekte &amp; Links</h2>
         <div class="gallery">
+          <!--Karten-->
           <div class="card">
             <figure><iframe class="map-embed" title="Berlin" src="https://www.openstreetmap.org/export/embed.html?bbox=13.0884%2C52.3383%2C13.7611%2C52.6755&layer=mapnik&marker=52.52%2C13.4050" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></figure>
             <div class="card-content"><div class="card-title">Berlin</div><div>Die Hauptstadt von Deutschland</div></div>
@@ -159,7 +156,7 @@ th{background:var(--accent);color:#fff;font-weight:700}
 
           <div class="card">
             <figure><iframe class="map-embed" title="Hochschule Mainz" src="https://www.openstreetmap.org/export/embed.html?bbox=8.2445%2C49.9905%2C8.2495%2C49.9935&layer=mapnik&marker=49.99195%2C8.24712" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></figure>
-            <div class="card-content"><a href="https://www.hs-mainz.de/studium/studiengaenge/technik/geoinformatik-bsc/uebersicht/" target="_blank" rel="noopener"><div class="card-title">Hochschule Mainz</div><div>Lucy‑Hillebrand‑Straße — Standort</div></a></div>
+            <div class="card-content"><a href="https://www.hs-mainz.de/studium/studiengaenge/technik/geoinformatik-bsc/uebersicht/" target="_blank" rel="noopener"><div class="card-title">Hochschule Mainz</div><div>Hier finden Sie nähere Informationen zu meinem Studium</div></a></div>
           </div>
 
           <div class="card">
@@ -173,23 +170,19 @@ th{background:var(--accent);color:#fff;font-weight:700}
   </div>
 </main>
 
-<!-- Footer mit Impressum und drei Logos -->
+<!-- Footer:-->
 <footer class="site-footer" role="contentinfo">
   <div class="footer-inner">
     <div class="imprint">© Marina Dahl</div>
+    <!--Logos-->
     <div class="footer-logos">
       <a href="https://github.com/dahlmarina8-pixel" target="_blank" rel="noopener" aria-label="GitHub">
-        <!-- GitHub SVG -->
         <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 .5a12 12 0 00-3.8 23.4c.6.1.8-.3.8-.6v-2.1c-3.3.7-4-1.6-4-1.6-.5-1.3-1.2-1.7-1.2-1.7-1-.7.1-.7.1-.7 1.1.1 1.7 1.1 1.7 1.1 1 .1 1.6.7 2 .6.1-.8.4-1.4.7-1.7-2.6-.3-5.3-1.3-5.3-5.6 0-1.2.4-2.2 1.1-3-.1-.3-.5-1.6.1-3.3 0 0 .9-.3 3 .1a10.2 10.2 0 015.5 0c2.1-.4 3-.1 3-.1.6 1.7.2 3 .1 3.3.7.8 1.1 1.8 1.1 3 0 4.3-2.7 5.3-5.3 5.6.4.4.8 1.1.8 2.2v3.3c0 .3.2.7.8.6A12 12 0 0012 .5z"/></svg>
       </a>
-
       <a href="https://www.linkedin.com/in/your-profile" target="_blank" rel="noopener" aria-label="LinkedIn">
-        <!-- LinkedIn SVG -->
         <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4.98 3.5a2.5 2.5 0 11.02 0zM3 8.98h3.98V21H3zM9.5 8.98H13v1.6h.06c.5-.95 1.73-1.95 3.56-1.95 3.81 0 4.51 2.5 4.51 5.75V21h-3.98v-5.07c0-1.21-.02-2.77-1.69-2.77-1.7 0-1.96 1.33-1.96 2.68V21H9.5z"/></svg>
       </a>
-
       <a href="https://mail.google.com/mail/?view=cm&fs=1&to=marina.dahl@students.hs-mainz.de" target="_blank" rel="noopener" aria-label="Gmail">
-        <!-- Gmail / mail SVG -->
         <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M20 4H4a2 2 0 00-2 2v12a2 2 0 002 2h16a2 2 0 002-2V6a2 2 0 00-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/></svg>
       </a>
     </div>
