--- a/maps/map_5_3Dgebaeude.html
+++ b/maps/map_5_3Dgebaeude.html
@@ -2,10 +2,9 @@
 <html lang="de">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Gebäude Deutschland - Cesium</title>
-  <script src="https://cesium.com/downloads/cesiumjs/releases/1.109/Build/Cesium/Cesium.js"></script>
-  <link href="https://cesium.com/downloads/cesiumjs/releases/1.109/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
+  <title>Gelände Deutschland 3D (Cesium)</title>
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.130/Build/Cesium/Cesium.js"></script>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.130/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
   <style>
     html, body, #cesiumContainer {
       width: 100%;
@@ -19,36 +18,64 @@
 <body>
   <div id="cesiumContainer"></div>
   <script>
-    Cesium.Ion.defaultAccessToken = 'YOUR_CESIUM_ION_TOKEN'; // Falls benötigt
-    
+    // Initialisieren des Cesium-Viewers
     const viewer = new Cesium.Viewer('cesiumContainer', {
-      terrainProvider: Cesium.createWorldTerrain(),
-      baseLayerPicker: false,
+      shadows: false,
       geocoder: false,
-      homeButton: false,
-      sceneModePicker: false,
-      navigationHelpButton: false,
-      animation: false,
-      timeline: false,
-      fullscreenButton: false
+      baseLayerPicker: false
     });
 
-    // Basemap.de 3D-Gebäude Tileset hinzufügen
-    const tileset = viewer.scene.primitives.add(
-      new Cesium.Cesium3DTileset({
-        url: 'https://sgx.geodatenzentrum.de/gdz_basemapde_vektor/tiles/v1/bm_gebaeude/collection.json'
-      })
-    );
+    // Hintergrundkarte für Gebiete außerhalb von Deutschland (OpenStreetMap)
+    const osm = new Cesium.OpenStreetMapImageryProvider({
+      url: 'https://a.tile.openstreetmap.org/',
+      credit: new Cesium.Credit(
+        '<a href="https://www.openstreetmap.org/copyright" target="_blank">&copy; OpenStreetMap contributors</a>',
+        true
+      )
+    });
+    viewer.imageryLayers.addImageryProvider(osm);
 
-    // Kamera auf Deutschland zentrieren
+    // Hintergrundkarte: WMS der SmartMapping Karte (basemap.de)
+    const provider = new Cesium.WebMapServiceImageryProvider({
+      url: 'https://sgx.geodatenzentrum.de/wms_basemapde',
+      layers: "de_basemapde_web_raster_farbe",
+      parameters: {
+        transparent: true,
+        format: "image/png"
+      }
+    });
+    viewer.imageryLayers.addImageryProvider(provider);
+
+    // Kamera auf Punkt zentrieren
     viewer.camera.flyTo({
-      destination: Cesium.Cartesian3.fromDegrees(10.4515, 51.1657, 500000),
+      destination: Cesium.Cartesian3.fromDegrees(10.277367, 47.415311, 3500.0),
       orientation: {
-        heading: Cesium.Math.toRadians(0),
-        pitch: Cesium.Math.toRadians(-45),
+        heading: Cesium.Math.toRadians(50.0),
+        pitch: Cesium.Math.toRadians(-40.0),
         roll: 0.0
       }
     });
+
+    // Gelände ergänzen
+    async function startup(Cesium) {
+      'use strict';
+      try {
+        const terr = await Cesium.CesiumTerrainProvider.fromUrl(
+          "https://sgx.geodatenzentrum.de/gdz_basemapde_3d_gelaende/dgm5_4326_mesh/"
+        );
+        viewer.terrainProvider = terr;
+      } catch (error) {
+        console.error(`Error creating tileset: ${error}`);
+      }
+    }
+
+    // Beim Aufruf der Anwendung das Gelände laden
+    if (typeof Cesium !== 'undefined') {
+      startup(Cesium).catch((error) => {
+        "use strict";
+        console.error(error);
+      });
+    }
   </script>
 </body>
 </html>
