--- a/index.html
+++ b/index.html
@@ -214,6 +214,15 @@ th{background:var(--accent);color:#fff;font-weight:700}
             </div>
           </div>
 
+          <div class="card">
+            <figure>
+              <iframe class="map-embed" src="https://dahlmarina8-pixel.github.io/maps/kepler.gl.html"></iframe>
+            </figure>
+            <div class="card-content">
+              <h3 class="card-title">Karte von kepler.gl</h3>
+            </div>
+          </div>
+
         </div>
       </section>
     </div>
